--- a/Transfer_Learning/cvpr_2nd_submission/related_work.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/related_work.tex
@@ -12,13 +12,16 @@ In analogy to pretrained image encoders, the NLP community has also started to c
 The success of transfer learning raises several research questions, such as the characteristics which make a dataset more favorable to be used in pretraining (notably ImageNet~\cite{huh2016makes}), or regarding the observed performance correlation of models with different architectures between the source and target domains~\cite{kornblith2019better}.
 One of the most systematic works in this area is the computational taxonomic map for task transfer learning~\cite{zamir2018taskonomy}, which aimed at discovering the dependencies between twenty-six 2D, 2.5D, 3D, and semantic computer vision tasks.
 
-In Visual Reasoning, transfer learning has helped models generalize better to domains with different distributions. Using the CLEVR-CoGenT~\cite{johnson2017clevr} dataset and finetuning, \cite{mascharka2018transparency, perez2018film, johnson2017inferring} have demonstrated impressive accuracy gains on a domain with different attributes combinations than the one used for training. Similarly, using the COG dataset, \cite{yang2018dataset} have shown that a model can do significantly better than chance on a task it was not explicitly trained on, by using knowledge learned on other tasks.
+In Visual Reasoning, transfer learning has helped models generalize better to domains with different distributions. Using the CLEVR-CoGenT~\cite{johnson2017clevr} dataset and finetuning, \cite{mascharka2018transparency, perez2018film, johnson2017inferring} have demonstrated impressive accuracy gains on a domain with different attributes combinations than the one used for training. Similarly, using the COG dataset, \cite{yang2018dataset} have shown that a different model can do significantly better than chance on a task it was not explicitly trained on, by using knowledge learned on other tasks.
 
-\tk{The experimental results clearly indicate that transfer learning is helping, despite that the core assumptions on the compatibility/similarity of domains is broken (transfering between domains having similar distribution).
-We do not understand this fully, thus the need for a more systematic research on that topic emerges.
-The paper adresses that by introducing a theoretical framework/taxonomy enabling to categorise visual reasoning tasks.
-As a starting point, we picked two visual reasoning datasets and analyse the achieved results through the prism of the proposed taxonomy.
-}
+These results clearly indicate the usefulness of transfer learning, despite the assumption of similar distributions between the source and target domains not being respected. As this is currently not fully understood, it highlights the need for a more systematic research direction on these topics.
+We propose to address this by introducing a taxonomy of transfer learning in visual reasoning, and illustrate it with two visual reasoning datasets.
 
-
-\tk{after reading that section the reader should end up with a conclusion that: there are no good models for TL in VR and, moreover, the datasets are randomly testing this or that, there is no theoretical framework showing that do they mean/bigger picture is missing}
+% \tk{The experimental results clearly indicate that transfer learning is helping, despite that the core assumptions on the compatibility/similarity of domains is broken (transfering between domains having similar distribution).
+% We do not understand this fully, thus the need for a more systematic research on that topic emerges.
+% The paper adresses that by introducing a theoretical framework/taxonomy enabling to categorise visual reasoning tasks.
+% As a starting point, we picked two visual reasoning datasets and analyse the achieved results through the prism of the proposed taxonomy.
+% }
+%
+%
+% \tk{after reading that section the reader should end up with a conclusion that: there are no good models for TL in VR and, moreover, the datasets are randomly testing this or that, there is no theoretical framework showing that do they mean/bigger picture is missing}
