--- a/Transfer_Learning/cvpr_2nd_submission/introduction.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/introduction.tex
@@ -6,9 +6,12 @@ However, in many real-world scenarios, this assumption does not hold. Moreover, 
 One of the widely used solutions is Transfer Learning~\cite{pan2009survey,weiss2016survey}, a technique which enhances model performance by transferring \emph{information} from one domain to another.
 
 
-In this work we focus on transfer learning in multi-modal reasoning tasks combining vision and language~\cite{mogadala2019trends}. Recently introduced visual reasoning datasets, such as ~\cite{johnson2017clevr,yang2018dataset,song2018explore}, attempt to probe the generalization capabilities of models under various transfer learning scenarios. For example, CLEVR/CoGenT \cite{johnson2017clevr} offers two dataset variants with different combinations of visual attributes. Whereas, COG \cite{yang2018dataset}, a Video QA reasoning dataset, contains two variants with different number of frames and scene complexity.  Both datasets come with a number of task classes that require similar reasoning abilities (e.g. compare or count objects).
-The open question is whether we can build a neural architecture that fosters transfer learning and generalizes from simpler to more complex reasoning tasks.
-
+In this work we focus on transfer learning in multi-modal reasoning tasks combining vision and language~\cite{mogadala2019trends}. Recently introduced visual reasoning datasets, such as ~\cite{johnson2017clevr,yang2018dataset,song2018explore}, attempt to probe the generalization capabilities of models under various scenarios, trying to quatify the visual complexity of the analysed scene or compositional complexity of the question.
+Some of those setups seems to be well suited for transfer learning, still, not addressing that isue directly.
+For example, the \cite{johnson2017clevr} paper introduces the CLEVR dataset along with two variants (CoGenT-A and B) with varying combinations of visual attributes.
+Similarly, COG \cite{yang2018dataset}, a Video QA reasoning dataset, contains two variants (Canonical and Hard) with different number of frames and scene complexity.
+Both datasets come with a number of task classes that require similar reasoning abilities (e.g. compare or count objects).
+The open question that we address in this paper is whether we can build a neural architecture that fosters transfer learning and generalizes from simpler to more complex reasoning tasks.
 
 \noindent The contributions of this paper are the following:
 %Consequently:
