--- a/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
@@ -1,10 +1,5 @@
 \section{Transfer Learning}
 \label{sec:transfer_learning}
-\begin{figure*}
-	\centering
-	\includegraphics[width=0.9\textwidth]{../img/architecture/transfer_taxo}
-	\caption{Transfer learning taxonomy.}\label{fig:taskonomy}
-\end{figure*}
 Due to the complex nature of visual reasoning, it appears that
 transfer learning from a source domain to a target domain can be investigated in
 multiple ways, depending on how the two domains are related. This includes visual attributes such as size, color and shape, temporal characteristics reflected in the number of frames and scene complexity, and finally the reasoning difficulty. 
@@ -41,6 +36,23 @@ domains; the second might need external memory to remember relevant objects to g
 Another situation is when the questions themselves can be grouped into families such as count-based queries,
 comparison of objects, or existence of objects with certain features etc.
 This entails studying transfer learning between families of tasks which requires extending the above definition.
+
+\begin{table}[b!]
+	\centering
+	%\begin{adjustbox}{width=0.45\textwidth}
+	\begin{tabular}{cccc}
+		\toprule
+		Variant	& Cubes	& Cylinders &	Spheres	\\
+		\midrule
+		CLEVR &  Any Color  & Any Color 	&	Any color  \\
+		CoGenT-A &  Family A  & Family B 	&	Any color  \\
+		CoGenT-B	&	Family B  &	Family A	&	Any color \\
+		\bottomrule
+	\end{tabular}
+	%\end{adjustbox}
+	\caption{Allowed feature combinations in the CoGenT-A and CoGenT-B variants of the CLEVR dataset.}%\vspace{2pts}
+	\label{tab:cogent_conditions}
+\end{table}
 
 We now formally define 3 kinds of transfer learning problems, namely,
 \emph{feature transfer}, \emph{temporal transfer},
