--- a/Transfer_Learning/cvpr_2nd_submission/samnet.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/samnet.tex
@@ -26,7 +26,7 @@ iterative reasoning as proposed e.g. in MAC (Memory-Attention-Composition) Netwo
 	\centering
 	\includegraphics[width=\textwidth]{../img/architecture/SAMNETmodel}
 	\caption{General architecture of SAMNet.}
-	\label{fig:samnet}
+	\label{fig:samnet}\vspace{-15pt}
 \end{figure*}
 
 A distinctive feature of the SAM Network is its frame-by-frame temporal processing approach, where a single frame can be accessed at once. This is a notable difference from~\cite{haurilet2019s}, which uses graph traversal reasoning. The recurrent nature of SAMNet does not prevent frame sequences longer than those used for training.
@@ -113,6 +113,14 @@ We finally update the write head so that it points to the succeeding address if 
 Let $\whead'_{t-1}$ denote the circular shift to the right of $\whead_{t-1}$ which corresponds to the soft version of the head update.
 Then:
 \[ \whead_t = \doadd_t \cdot \whead'_{t-1} + (1-\doadd_t) \cdot \whead_{t-1} \]
+
+\begin{figure*}[htbp]
+	\centering
+	\includegraphics[width=0.9\textwidth]{../img/architecture/transfer_taxo}
+	\caption{Transfer learning taxonomy.}
+	\label{fig:taskonomy}\vspace{-15pt}
+\end{figure*}
+
 
 \noindent\textbf{Summary Update Unit.}
 %\paragraph{Summary Update Unit.}
