\vspace{-10pt} for three two-column images, rest normal, 8 pages
Signed-off-by: ibm <tkornuta.ibm@gmail.com>

--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -33,7 +33,7 @@ We first investigate feature transfer using CLEVR-CoGenT, followed by temporal t
 		\includegraphics[width=0.9\textwidth]{../img/plots/cog_hard_baseline_labels.pdf}
 	\end{subfigure}%
 	\caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the baseline model~\cite{yang2018dataset} (dotted gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
-	\label{fig:samnet_cog_detailed}
+	\label{fig:samnet_cog_detailed}\vspace{-10pt}
 \end{figure*}
 
 \subsection{Performance of SAMNet on CLEVR}
